--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@sanity/block-content-to-react": "^2.0.7",
+        "@sanity/client": "^0.140.36",
+        "@sanity/image-url": "^0.140.22",
         "@types/styled-components": "^5.1.11",
         "babel-plugin-styled-components": "^1.13.2",
-        "next": "11.0.1",
+        "next": "^11.1.0",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "styled-components": "^5.3.0"
     },
     "devDependencies": {
-        "@types/react": "17.0.15",
+        "@types/react": "17.0.18",
         "eslint": "7.31.0",
         "eslint-config-next": "11.0.1",
         "typescript": "4.3.5"
