--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
         "@sanity/block-content-to-react": "^2.0.7",
         "@sanity/client": "^0.140.36",
         "@sanity/image-url": "^0.140.22",
+        "@types/react-pdf": "^5.0.5",
         "@types/styled-components": "^5.1.11",
         "babel-plugin-styled-components": "^1.13.2",
         "next": "^11.1.0",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-multi-carousel": "^2.6.5",
+        "react-pdf": "^5.3.2",
         "styled-components": "^5.3.0"
     },
     "devDependencies": {
