--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "babel-plugin-styled-components": "^1.13.2",
         "next": "^11.1.0",
         "react": "17.0.2",
+        "react-date-picker": "^8.3.2",
         "react-dom": "17.0.2",
+        "react-modern-calendar-datepicker": "^3.1.6",
         "react-multi-carousel": "^2.6.5",
         "react-pdf": "^5.3.2",
         "styled-components": "^5.3.0"
