--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/styled-components": "^5.1.11",
         "babel-plugin-styled-components": "^1.13.2",
         "emailjs-com": "^3.2.0",
+        "google-map-react": "^2.1.10",
         "next": "^11.1.0",
         "react": "17.0.2",
         "react-date-picker": "^8.3.2",
