--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "styled-components": "^5.3.0"
     },
     "devDependencies": {
+        "@types/google-map-react": "^2.1.3",
         "@types/react": "17.0.18",
         "eslint": "7.31.0",
         "eslint-config-next": "11.0.1",
