--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,8 @@
     "editor.wordWrap": "bounded",
     "editor.wordWrapColumn": 100,
     "editor.snippetSuggestions": "top",
-    "editor.suggest.snippetsPreventQuickSuggestions": false
+    "editor.suggest.snippetsPreventQuickSuggestions": false,
+    "cSpell.words": [
+        "Venable"
+    ]
 }
