--- a/package.json
+++ b/package.json
@@ -1,36 +1,38 @@
 {
-    "name": "venablepark",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev -p 3005",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "@sanity/block-content-to-react": "^2.0.7",
-        "@sanity/client": "^0.140.36",
-        "@sanity/image-url": "^0.140.22",
-        "@types/react-pdf": "^5.0.5",
-        "@types/styled-components": "^5.1.11",
-        "babel-plugin-styled-components": "^1.13.2",
-        "emailjs-com": "^3.2.0",
-        "google-map-react": "^2.1.10",
-        "next": "^11.1.0",
-        "react": "17.0.2",
-        "react-date-picker": "^8.3.2",
-        "react-dom": "17.0.2",
-        "react-modern-calendar-datepicker": "^3.1.6",
-        "react-multi-carousel": "^2.6.5",
-        "react-pdf": "^5.3.2",
-        "styled-components": "^5.3.0"
-    },
-    "devDependencies": {
-        "@types/google-map-react": "^2.1.3",
-        "@types/react": "17.0.18",
-        "eslint": "7.31.0",
-        "eslint-config-next": "11.0.1",
-        "typescript": "4.3.5"
-    }
+	"name": "venablepark",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev -p 3005",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"@react-pdf-viewer/core": "^3.1.0",
+		"@react-pdf-viewer/default-layout": "^3.1.0",
+		"@sanity/block-content-to-react": "^2.0.7",
+		"@sanity/client": "^0.140.36",
+		"@sanity/image-url": "^0.140.22",
+		"emailjs-com": "^3.2.0",
+		"google-map-react": "^2.1.10",
+		"next": "^12.0.8",
+		"pdfjs-dist": "2.3.200",
+		"react": "^17.0.2",
+		"react-date-picker": "^8.3.6",
+		"react-dom": "^17.0.2",
+		"react-is": "^17.0.2",
+		"react-multi-carousel": "^2.6.5",
+		"react-pdf": "^5.7.0",
+		"styled-components": "^5.3.3"
+	},
+	"devDependencies": {
+		"@types/google-map-react": "^2.1.4",
+		"@types/node": "^17.0.14",
+		"@types/react-pdf": "^5.0.9",
+		"@types/styled-components": "^5.1.21",
+		"eslint": "7.31.0",
+		"eslint-config-next": "11.0.1",
+		"typescript": "4.3.5",
+		"webpack": "^5.68.0"
+	}
 }
