--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@sanity/block-content-to-react": "^2.0.7",
 		"@sanity/client": "^0.140.36",
 		"@sanity/image-url": "^0.140.22",
+		"@types/gtag.js": "0.0.8",
 		"emailjs-com": "^3.2.0",
 		"google-map-react": "^2.1.10",
 		"next": "^12.0.8",
