--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"@sanity/client": "^0.140.36",
 		"@sanity/image-url": "^0.140.22",
 		"@types/gtag.js": "0.0.8",
+		"@types/react": "^18.2.45",
+		"@types/react-dom": "^18.2.18",
 		"emailjs-com": "^3.2.0",
 		"google-map-react": "^2.1.10",
 		"next": "^12.0.8",
@@ -28,7 +30,7 @@
 	},
 	"devDependencies": {
 		"@types/google-map-react": "^2.1.4",
-		"@types/node": "^17.0.14",
+		"@types/node": "^17.0.45",
 		"@types/react-pdf": "^5.0.9",
 		"@types/styled-components": "^5.1.21",
 		"eslint": "7.31.0",
